Cleanup pom a little. Remove a package cycle. Fixed some unit tests.
git-svn-id: https://wush.net/svn/mindalliance@2645 baad322d-9929-0410-88f0-f92e8ff3e1bd